--- a/Common/Shared.props
+++ b/Common/Shared.props
@@ -11,14 +11,31 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19367-01" PrivateAssets="All" />
   </ItemGroup>
   <!--</SourceLink>-->
-  <!--<BasicDefinitions>: It is useful to knwow whether we are in the Tests/ folder and/or if the current project is a Test.-->
+  <!--<BasicDefinitions>: provides simple and useful definitions.-->
   <PropertyGroup>
-    <IsTestProject Condition="$(MSBuildProjectName.EndsWith('.Tests'))">true</IsTestProject>
-    <IsInTestsFolder Condition="$(MSBuildProjectDirectoryNoRoot.Contains('\Tests\'))">true</IsInTestsFolder>
+    <!-- Simple IsTestProject and IsInTestsFolder variables. -->
+    <IsTestProject Condition=" '$(IsTestProject)' == '' And $(MSBuildProjectName.EndsWith('.Tests'))">true</IsTestProject>
+    <IsInTestsFolder Condition="$(MSBuildProjectDirectory.Contains('\Tests\')) Or $(MSBuildProjectDirectory.Contains('/Tests/'))">true</IsInTestsFolder>
     <!-- SolutionDir is defined by Visual Studio, we unify the behavior here. -->
-    <SolutionDir Condition=" $(SolutionDir) != '' ">$([System.IO.Path]::GetDirectoryName($([System.IO.Path]::GetDirectoryName($(MSBuildThisFileDirectory)))))\</SolutionDir>
+    <SolutionDir Condition=" '$(SolutionDir)' == '' ">$([System.IO.Path]::GetDirectoryName($([System.IO.Path]::GetDirectoryName($(MSBuildThisFileDirectory)))))/</SolutionDir>
+    <!-- CakeBuild is obsolete: the new standard ContinuousIntegrationBuild should be used. -->
+    <ContinuousIntegrationBuild Condition=" '$(CakeBuild)' == 'true' ">true</ContinuousIntegrationBuild>
+    <!-- Always enable Deterministic build. -->
+    <Deterministic>true</Deterministic>
+    <!-- Always allow the repository url to appear in the nuget package. -->
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <!-- InformationalVersion is either the Zero version or provided by the CodeCakeBuilder when in CI build). -->
+    <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
+    <!-- Always embedds the .pdb in the nuget package.
+       TODO: When using SourceLink, we should follow the guidelines here: https://github.com/dotnet/sourcelink#using-source-link-in-net-projects
+             (only for packages that are ultimately uploaded to nuget.org). -->
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+    <!-- Using Microsoft.Build.CentralPackageVersions: this avoids the Packages.props at the root of the repository. -->
+    <CentralPackagesFile>$(MSBuildThisFileDirectory)CentralPackages.props</CentralPackagesFile>
   </PropertyGroup>
-  <!--</BasicDefinitions>-->
+  <ItemGroup>
+    <SourceRoot Include="$(SolutionDir)" />
+  </ItemGroup>
   <!--<StandardProperties>-->
   <PropertyGroup>
     <RepositoryUrl>https://github.com/Signature-OpenSource/CK-Cris.git</RepositoryUrl>
