--- a/CK.Cris.Runtime/CK.Cris.Runtime.csproj
+++ b/CK.Cris.Runtime/CK.Cris.Runtime.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="CK.StObj.Runtime" />
+    <PackageReference Include="CK.CodeGen" VersionOverride="0.15.1--0001-develop" />
   </ItemGroup>
 
   <ItemGroup>
