--- a/CK.Cris.Executor/CK.Cris.Executor.csproj
+++ b/CK.Cris.Executor/CK.Cris.Executor.csproj
@@ -5,13 +5,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Description>Minimal framework based on Autimatic Services to provide ambient values.</Description>
     <Nullable>enable</Nullable>
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CK.StObj.Model" />
+    <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
   </ItemGroup>
 
 </Project>
