--- a/.gitignore
+++ b/.gitignore
@@ -257,3 +257,4 @@ Tests/**/TestResult*.xml
 Tests/**/Logs/
 Tests/**/CKSetup-WorkingDir/
 CodeCakeBuilder/MemoryKey.*.txt
+CodeCakeBuilder/UnitTestsDone.*.txt
