--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
-
+﻿
 version: build{build}
-image: Visual Studio 2017
-clone_folder: C:\CKli-World\CK-Core-Projects\CK-Text
+image: Visual Studio 2019
+clone_folder: C:\CKli-World\CK-Crs-Projects\CK-Cris
 branches:
   only:
     - master
@@ -9,8 +9,7 @@ branches:
 environment:
   CODECAKEBUILDER_SECRET_KEY:
     secure: 8VAzdXgUQaJyFoU3WLf2iPFV/8zPDm9qV4TfOpx8/rg=
-install:
-  - ps: ./CodeCakeBuilder/InstallCredentialProvider.ps1
+install: []
 build_script:
   - dotnet run --project CodeCakeBuilder -nointeraction
 test: off
