--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -1,14 +1,14 @@
 <Project>
   <ItemGroup>
-    <PackageReference Update="CK.StObj.Model" Version="0.0.0--02wak5d-local+v14.0.1" />
-    <PackageReference Update="CK.StObj.Runtime" Version="0.0.0--02wak5d-local+v14.0.1" />
-    <PackageReference Update="CK.Testing.StObjEngine" Version="0.0.0--02wak5d-local+v14.0.1" />
+    <PackageReference Update="CK.StObj.Model" Version="0.0.0--02wcgch-local+v14.0.1" />
+    <PackageReference Update="CK.StObj.Runtime" Version="0.0.0--02wcgch-local+v14.0.1" />
+    <PackageReference Update="CK.Poco.Json" Version="0.0.0--02wcgch-local+v14.0.1" />
+    <PackageReference Update="CK.Testing.StObjEngine" Version="0.0.0--02wcgch-local+v14.0.1" />
     <PackageReference Update="CK.AspNet" Version="5.3.1" />
     <PackageReference Update="CK.Auth.Abstractions" Version="0.0.0--02w93qm-local+v0.10.0" />
     <PackageReference Update="Microsoft.SourceLink.GitLab" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Update="CK.Testing.StObjEngine" Version="14.0.2--0044-develop" />
     <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Update="NUnit" Version="3.12.0" />
     <PackageReference Update="NUnit3TestAdapter" Version="3.16.1" />
