--- a/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
+++ b/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="%24StObjGen\" />
     <Folder Include="bin\Debug\netcoreapp3.1\" />
   </ItemGroup>
 
