--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -1,12 +1,14 @@
 <Project>
   <ItemGroup>
-    <PackageReference Update="CK.StObj.Model" Version="14.0.2--0099-develop" />
-    <PackageReference Update="CK.StObj.Runtime" Version="14.0.2--0099-develop" />
-    <PackageReference Update="CK.Poco.Json" Version="14.0.2--0099-develop" />
-    <PackageReference Update="CK.Testing.StObjEngine" Version="14.0.2--0099-develop" />
-    <PackageReference Update="CK.AspNet.Tester" Version="3.1.2--0002-develop" />
-    <PackageReference Update="CK.AspNet.Auth" Version="10.1.1--0008-develop" />
-    <PackageReference Update="CK.Auth.Abstractions" Version="0.10.1--0006-develop" />
+    <PackageReference Update="CK.StObj.TypeScript" Version="0.1.0-a00-00-0006-develop" />
+    <PackageReference Update="CK.StObj.TypeScript.Engine" Version="0.1.0-a00-00-0006-develop" />
+    <PackageReference Update="CK.StObj.Model" Version="14.0.2--0103-develop" />
+    <PackageReference Update="CK.StObj.Runtime" Version="14.0.2--0103-develop" />
+    <PackageReference Update="CK.Poco.Json" Version="14.0.2--0103-develop" />
+    <PackageReference Update="CK.Testing.StObjEngine" Version="14.0.2--0103-develop" />
+    <PackageReference Update="CK.AspNet.Tester" Version="3.1.2--0003-develop" />
+    <PackageReference Update="CK.AspNet.Auth" Version="10.1.1--0012-develop" />
+    <PackageReference Update="CK.Auth.Abstractions" Version="0.10.1--0007-develop" />
     <PackageReference Update="Microsoft.SourceLink.GitLab" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
