--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -1,14 +1,14 @@
 <Project>
   <ItemGroup>
     <PackageReference Update="CK.StObj.TypeScript" Version="0.1.0-a00-00-0006-develop" />
-    <PackageReference Update="CK.StObj.TypeScript.Engine" Version="0.1.1--0002-develop" />
-    <PackageReference Update="CK.StObj.Model" Version="15.0.1--0002-develop" />
-    <PackageReference Update="CK.StObj.Runtime" Version="15.0.1--0002-develop" />
-    <PackageReference Update="CK.Poco.Json" Version="15.0.1--0002-develop" />
-    <PackageReference Update="CK.Testing.StObjEngine" Version="15.0.1--0002-develop" />
-    <PackageReference Update="CK.AspNet.Tester" Version="3.1.3--0001-develop" />
-    <PackageReference Update="CK.AspNet.Auth" Version="11.0.1--0005-develop" />
-    <PackageReference Update="CK.Auth.Abstractions" Version="1.0.1--0001-develop" />
+    <PackageReference Update="CK.StObj.TypeScript.Engine" Version="0.1.1" />
+    <PackageReference Update="CK.StObj.Model" Version="15.0.1" />
+    <PackageReference Update="CK.StObj.Runtime" Version="15.0.1" />
+    <PackageReference Update="CK.Poco.Json" Version="15.0.1" />
+    <PackageReference Update="CK.Testing.StObjEngine" Version="15.0.1" />
+    <PackageReference Update="CK.AspNet.Tester" Version="3.1.2" />
+    <PackageReference Update="CK.AspNet.Auth" Version="11.0.1" />
+    <PackageReference Update="CK.Auth.Abstractions" Version="1.0.0" />
     <PackageReference Update="Microsoft.SourceLink.GitLab" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
