CI build: Upgrading dependencies:
NuGet:CK.Testing.StObjEngine/16.1.1--0002-develop
NuGet:CK.AspNet.Tester/3.1.3--0004-develop
NuGet:CK.AspNet.Auth/12.1.1--0002-develop
NuGet:CK.Poco.Json/16.1.1--0002-develop
NuGet:CK.Testing.StObjEngine/16.1.1--0002-develop
NuGet:CK.StObj.Runtime/16.1.1--0002-develop
NuGet:CK.StObj.TypeScript.Engine/0.3.1--0002-develop
NuGet:CK.StObj.Model/16.1.1--0002-develop
NuGet:CK.Auth.Abstractions/1.0.1--0004-develop
NuGet:CK.Testing.StObjEngine/16.1.1--0002-develop.

--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -1,14 +1,14 @@
 <Project>
   <ItemGroup>
     <PackageReference Update="CK.StObj.TypeScript" Version="0.1.0-a00-00-0006-develop" />
-    <PackageReference Update="CK.StObj.TypeScript.Engine" Version="0.3.0" />
-    <PackageReference Update="CK.StObj.Model" Version="16.1.0" />
-    <PackageReference Update="CK.StObj.Runtime" Version="16.1.0" />
-    <PackageReference Update="CK.Poco.Json" Version="16.1.0" />
-    <PackageReference Update="CK.Testing.StObjEngine" Version="16.1.0" />
-    <PackageReference Update="CK.AspNet.Tester" Version="3.1.2" />
-    <PackageReference Update="CK.AspNet.Auth" Version="12.1.0" />
-    <PackageReference Update="CK.Auth.Abstractions" Version="1.0.0" />
+    <PackageReference Update="CK.StObj.TypeScript.Engine" Version="0.3.1--0002-develop" />
+    <PackageReference Update="CK.StObj.Model" Version="16.1.1--0002-develop" />
+    <PackageReference Update="CK.StObj.Runtime" Version="16.1.1--0002-develop" />
+    <PackageReference Update="CK.Poco.Json" Version="16.1.1--0002-develop" />
+    <PackageReference Update="CK.Testing.StObjEngine" Version="16.1.1--0002-develop" />
+    <PackageReference Update="CK.AspNet.Tester" Version="3.1.3--0004-develop" />
+    <PackageReference Update="CK.AspNet.Auth" Version="12.1.1--0002-develop" />
+    <PackageReference Update="CK.Auth.Abstractions" Version="1.0.1--0004-develop" />
     <PackageReference Update="Microsoft.SourceLink.GitLab" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
