--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -1,6 +1,6 @@
 <Project>
   <ItemGroup>
-    <PackageReference Update="CK.StObj.TypeScript" Version="0.1.0-a00-00-0006-develop" />
+    <PackageReference Update="CK.StObj.TypeScript" Version="0.3.1--0002-develop" />
     <PackageReference Update="CK.StObj.TypeScript.Engine" Version="0.3.1--0002-develop" />
     <PackageReference Update="CK.StObj.Model" Version="16.1.1--0002-develop" />
     <PackageReference Update="CK.StObj.Runtime" Version="16.1.1--0002-develop" />
