--- a/CK.Cris.AspNet/CK.Cris.AspNet.csproj
+++ b/CK.Cris.AspNet/CK.Cris.AspNet.csproj
@@ -11,11 +11,11 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="CK.AspNet.Auth" />
-    <PackageReference Include="CK.Poco.Json" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.Executor\CK.Cris.Executor.csproj" />
+    <ProjectReference Include="..\CK.Cris.TypeScript\CK.Cris.TypeScript.csproj" />
   </ItemGroup>
 
 </Project>
