--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,6 @@
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
 x64/
 x86/
 bld/
@@ -262,3 +260,6 @@ $StObjGen/
 
 /Tests/CK.Cris.Tests/TypeScriptOutput/
 /Tests/CK.Cris.AspNet.Tests/TypeScriptOutput/
+
+CodeCakeBuilder/[Rr]elease/
+CodeCakeBuilder/[Rr]eleases/
