--- a/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
+++ b/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
@@ -6,18 +6,22 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
+    <description>
+    This package extends the IPoco typescript code for ICommand Poco by adding their CommandModel.
+
+    The CK/Cris/Model.ts defines the CommandModel and ICrisEndpoint interfaces.
+</description>
   </PropertyGroup>
   <!--
-         The CK.StObj.TypeScript package contains only 2 types: the TypeScriptAttribute (with Folder, FileName,
+         The CK.StObj.TypeScript package contains 2 only types: the TypeScriptAttribute (with Folder, FileName,
          TypeName, SameFolderAs and SameFileAs properties) and the TypeScriptAspectConfiguration
          object, but it depends on another micro-package: the CK.Poco.Json that generates Json serialization.
 
-         The CK.StObj.TypeScript.Engine is bigger and triggers TypeScript generation only when the TypeScriptAspect is
-         declared and one or more <TypeScript><OutuptPath>...</OutuptPath></TypeScript> is defined in the BinPathConfiguration.
+         The CK.StObj.TypeScript.Engine is the one that does the job (it triggers TypeScript generation only when the TypeScriptAspect is
+         declared and one or more <TypeScript><OutuptPath>...</OutuptPath></TypeScript> is defined in the BinPathConfiguration).
     -->
   <ItemGroup>
     <PackageReference Include="CK.StObj.TypeScript" />
-    <PackageReference Include="CK.Poco.Json" />
   </ItemGroup>
 
   <ItemGroup>
