--- a/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
+++ b/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
@@ -19,6 +19,9 @@
 
          The CK.StObj.TypeScript.Engine is the one that does the job (it triggers TypeScript generation only when the TypeScriptAspect is
          declared and one or more <TypeScript><OutuptPath>...</OutuptPath></TypeScript> is defined in the BinPathConfiguration).
+
+        For components registration, we must ensure that this CK.Cris.TypeScript.dll keeps a reference to the CK.StObj.TypeScript.dll.
+        This is the goal of the Fake in EnsureReference.cs.
     -->
   <ItemGroup>
     <PackageReference Include="CK.StObj.TypeScript" />
