--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -10,6 +10,7 @@
     <PackageReference Update="CK.AspNet.Auth" Version="13.0.1" />
     <PackageReference Update="CK.Auth.Abstractions" Version="1.1.0" />
     <PackageReference Update="Microsoft.SourceLink.GitLab" Version="1.0.0" />
+    <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="16.9.60" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.8.3" />
