--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -1,14 +1,14 @@
 <Project>
   <ItemGroup>
-    <PackageReference Update="CK.StObj.TypeScript" Version="0.5.0" />
-    <PackageReference Update="CK.StObj.TypeScript.Engine" Version="0.5.0" />
-    <PackageReference Update="CK.StObj.Model" Version="18.0.0" />
-    <PackageReference Update="CK.StObj.Runtime" Version="18.0.0" />
+    <PackageReference Update="CK.StObj.TypeScript" Version="0.5.1--0005-develop" />
+    <PackageReference Update="CK.StObj.TypeScript.Engine" Version="0.5.1--0005-develop" />
+    <PackageReference Update="CK.StObj.Model" Version="18.0.1--0006-develop" />
+    <PackageReference Update="CK.StObj.Runtime" Version="18.0.1--0006-develop" />
     <PackageReference Update="CK.Poco.Json" Version="16.1.1--0065-develop" />
-    <PackageReference Update="CK.Testing.StObjEngine" Version="18.0.0" />
-    <PackageReference Update="CK.AspNet.Tester" Version="3.1.2" />
-    <PackageReference Update="CK.AspNet.Auth" Version="15.0.1" />
-    <PackageReference Update="CK.Auth.Abstractions" Version="1.1.0" />
+    <PackageReference Update="CK.Testing.StObjEngine" Version="18.0.1--0006-develop" />
+    <PackageReference Update="CK.AspNet.Tester" Version="3.1.3--0008-develop" />
+    <PackageReference Update="CK.AspNet.Auth" Version="15.0.2--0005-develop" />
+    <PackageReference Update="CK.Auth.Abstractions" Version="1.1.1--0004-develop" />
     <PackageReference Update="Microsoft.SourceLink.GitLab" Version="1.0.0" />
     <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="16.9.60" />
   </ItemGroup>
