--- a/CK.Cris.Executor.Engine/CK.Cris.Executor.Engine.csproj
+++ b/CK.Cris.Executor.Engine/CK.Cris.Executor.Engine.csproj
@@ -1,17 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <Sdk Name="Microsoft.Build.CentralPackageVersions" Version="2.0.52" />
   <Import Project="..\Common\Shared.props" />
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>CK.Setup.Cris</RootNamespace>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.Executor\CK.Cris.Executor.csproj" />
     <ProjectReference Include="..\CK.Cris.Engine\CK.Cris.Engine.csproj" />
   </ItemGroup>
-
 </Project>
