--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -1,8 +1,8 @@
 <Project>
   <ItemGroup>
-    <PackageReference Update="CK.StObj.TypeScript" Version="0.0.0--03ltbpw-local" />
+    <PackageReference Update="CK.StObj.TypeScript" Version="0.0.0--03lvwyw-local" />
     <PackageReference Update="CK.StObj.TypeScript.Engine" Version="0.0.0--03lvwyw-local" />
-    <PackageReference Update="CK.StObj.Model" Version="0.0.0--03ltbpw-local" />
+    <PackageReference Update="CK.StObj.Model" Version="0.0.0--03lvwyw-local" />
     <PackageReference Update="CK.StObj.Runtime" Version="0.0.0--03lvwyw-local" />
     <PackageReference Update="CK.Poco.Json" Version="16.1.1--0065-develop" />
     <PackageReference Update="CK.Testing.StObjEngine" Version="0.0.0--03lvwyw-local" />
@@ -13,8 +13,8 @@
     <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="17.0.64" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.8.3" />
-    <PackageReference Update="NUnit" Version="3.12.0" />
-    <PackageReference Update="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Update="NUnit" Version="3.13.2" />
+    <PackageReference Update="NUnit3TestAdapter" Version="4.1.0" />
   </ItemGroup>
 </Project>
