--- a/Common/CentralPackages.props
+++ b/Common/CentralPackages.props
@@ -1,14 +1,14 @@
 <Project>
   <ItemGroup>
-    <PackageReference Update="CK.StObj.TypeScript" Version="0.0.0--03lxewy-develop" />
-    <PackageReference Update="CK.StObj.TypeScript.Engine" Version="0.0.0--03lxewy-develop" />
-    <PackageReference Update="CK.StObj.Model" Version="0.0.0--03lxewy-develop" />
-    <PackageReference Update="CK.StObj.Runtime" Version="0.0.0--03lxewy-develop" />
+    <PackageReference Update="CK.StObj.TypeScript" Version="0.6.0-a" />
+    <PackageReference Update="CK.StObj.TypeScript.Engine" Version="0.6.0-a" />
+    <PackageReference Update="CK.StObj.Model" Version="19.0.0-a" />
+    <PackageReference Update="CK.StObj.Runtime" Version="19.0.0-a" />
     <PackageReference Update="CK.Poco.Json" Version="16.1.1--0065-develop" />
-    <PackageReference Update="CK.Testing.StObjEngine" Version="0.0.0--03lxewy-develop" />
-    <PackageReference Update="CK.AspNet.Tester" Version="0.0.0--03lx6aj-develop" />
-    <PackageReference Update="CK.AspNet.Auth" Version="0.0.0--03lxex0-develop" />
-    <PackageReference Update="CK.Auth.Abstractions" Version="0.0.0--03lx6aj-develop" />
+    <PackageReference Update="CK.Testing.StObjEngine" Version="19.0.0-a" />
+    <PackageReference Update="CK.AspNet.Tester" Version="4.0.0-a" />
+    <PackageReference Update="CK.AspNet.Auth" Version="16.0.0-a" />
+    <PackageReference Update="CK.Auth.Abstractions" Version="2.0.0-a" />
     <PackageReference Update="Microsoft.SourceLink.GitLab" Version="1.0.0" />
     <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="17.0.64" />
   </ItemGroup>
