--- a/CK.Auth.Cris/CK.Auth.Cris.csproj
+++ b/CK.Auth.Cris/CK.Auth.Cris.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <Sdk Name="Microsoft.Build.CentralPackageVersions" Version="2.0.52" />
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -7,6 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
-    <PackageReference Include="CK.Auth.Abstractions" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="2.0.0-r02" />
   </ItemGroup>
 </Project>
