--- a/Tests/CK.Cris.Tests/CK.Cris.Tests.csproj
+++ b/Tests/CK.Cris.Tests/CK.Cris.Tests.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="19.0.0-r09" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="19.0.0-r09-00-0015-develop" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
