Fixed IList to List and Async suffix in tests.

--- a/Tests/CK.Cris.Tests/CK.Cris.Tests.csproj
+++ b/Tests/CK.Cris.Tests/CK.Cris.Tests.csproj
@@ -13,4 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Cris.Engine\CK.Cris.Engine.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="%24StObjGen\" />
+  </ItemGroup>
 </Project>
