CI build: Upgrading dependencies:
NuGet:CK.StObj.TypeScript/0.7.1--0002-develop
NuGet:CK.Auth.Abstractions/2.0.1--0003-develop
NuGet:CK.Testing.StObjEngine/19.0.1--0002-develop
NuGet:CK.AspNet.Tester/4.0.1--0001-develop
NuGet:CK.AspNet.Auth/16.0.1--0002-develop
NuGet:CK.Testing.StObjEngine/19.0.1--0002-develop
NuGet:CK.StObj.Runtime/19.0.1--0002-develop
NuGet:CK.StObj.TypeScript.Engine/0.7.1--0002-develop
NuGet:CK.StObj.Model/19.0.1--0002-develop
NuGet:CK.Auth.Abstractions/2.0.1--0003-develop
NuGet:CK.Testing.StObjEngine/19.0.1--0002-develop.

--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.StObj.Runtime" Version="19.0.0" />
+    <PackageReference Include="CK.StObj.Runtime" Version="19.0.1--0002-develop" />
     <!--
           This CK.Cris.Engine directly implements the CK.Cris.TypeSript.Engine to avoid another (quite small) assembly.
 
@@ -13,7 +13,7 @@
           - the TypeScriptAspect is declared and one or more <TypeScript><OutuptPath>...</OutuptPath></TypeScript> is defined in the BinPathConfiguration.
           - AND the CK.Cris.TypeScript must be referenced.
     -->
-    <PackageReference Include="CK.StObj.TypeScript.Engine" Version="0.7.0" />
+    <PackageReference Include="CK.StObj.TypeScript.Engine" Version="0.7.1--0002-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
