--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,6 +5,6 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.StObj.Model" Version="19.0.1--0056-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="20.0.0" />
   </ItemGroup>
 </Project>
