--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -7,13 +7,13 @@
   <ItemGroup>
     <PackageReference Include="CK.StObj.Runtime" Version="20.0.0" />
     <!--
-          This CK.Cris.Engine directly implements the CK.Cris.TypeSript.Engine to avoid another (quite small) assembly.
+          This CK.Cris.Engine directly implements the TypeScriptCrisCommandGeneratorImpl to avoid another (quite small) assembly.
 
           Note that Cris TypeScript generation requires:
           - the TypeScriptAspect is declared and one or more <TypeScript><OutuptPath>...</OutuptPath></TypeScript> is defined in the BinPathConfiguration.
           - AND the CK.Cris.TypeScript must be referenced.
     -->
-    <PackageReference Include="CK.StObj.TypeScript.Engine" Version="0.8.0" />
+    <PackageReference Include="CK.StObj.TypeScript.Engine" Version="0.8.1--0006-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
