Fixed ICrisSender dumped code.

--- a/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
+++ b/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
@@ -20,7 +20,7 @@
         This is the goal of the Fake in EnsureReference.cs.
     -->
   <ItemGroup>
-    <PackageReference Include="CK.StObj.TypeScript" Version="0.0.0--03zlp4n-explo+v0.8.0" />
+    <PackageReference Include="CK.StObj.TypeScript" Version="0.0.0--041cj3b-explo+v0.9.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
