CI build: Upgrading dependencies:
NuGet:CK.StObj.TypeScript/0.12.1--0001-develop
NuGet:CK.Auth.Abstractions/3.1.3--0006-develop
NuGet:CK.Testing.StObjEngine/22.1.1--0001-develop
NuGet:CK.AspNet.Tester/4.0.2--0002-develop
NuGet:CK.AspNet.Auth/19.1.1--0001-develop
NuGet:CK.Testing.StObjEngine/22.1.1--0001-develop
NuGet:CK.StObj.Runtime/22.1.1--0001-develop
NuGet:CK.StObj.TypeScript.Engine/0.12.1--0001-develop
NuGet:CK.StObj.Model/22.1.1--0001-develop
NuGet:CK.Auth.Abstractions/3.1.3--0006-develop
NuGet:CK.Testing.StObjEngine/22.1.1--0001-develop.

--- a/CK.Auth.Cris/CK.Auth.Cris.csproj
+++ b/CK.Auth.Cris/CK.Auth.Cris.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
-    <PackageReference Include="CK.Auth.Abstractions" Version="3.1.2" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="3.1.3--0006-develop" />
   </ItemGroup>
 </Project>
