WIP. New "Executing command" model.command
New ICrisCallContext and ICrisExecutionContext.
Starting event implementation.
Exposed all handlers on ICrisPocoModel with new
CrisHandlerKind.

--- a/CK.Cris.Executor/CK.Cris.Executor.csproj
+++ b/CK.Cris.Executor/CK.Cris.Executor.csproj
@@ -4,6 +4,11 @@
     <Nullable>enable</Nullable>
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="CK.PerfectEvent" Version="19.0.1--0020-develop" />
+  </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
   </ItemGroup>
