Refactored so that CrisExecutionHost can handle back of front endpoints.

--- a/CK.Cris.Executor/CK.Cris.Executor.csproj
+++ b/CK.Cris.Executor/CK.Cris.Executor.csproj
@@ -10,4 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="BackgroundExecutor\" />
+  </ItemGroup>
 </Project>
