CI build: Upgrading dependencies:
NuGet:CK.Testing.StObjEngine/23.0.1--0131-develop
NuGet:CK.StObj.TypeScript/0.13.1--0070-develop
NuGet:CK.Auth.Abstractions/4.0.1--0022-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0131-develop
NuGet:CK.AspNet.Tester/4.0.3--0002-develop
NuGet:CK.AspNet.Auth/20.0.1--0068-develop
NuGet:CK.StObj.TypeScript.Engine/0.13.1--0070-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0131-develop
NuGet:CK.CodeGen/7.0.1--0040-develop
NuGet:CK.StObj.Runtime/23.0.1--0131-develop
NuGet:CK.PerfectEvent/19.0.1--0037-develop
NuGet:CK.Globalization/0.0.0--04jgnwa-develop
NuGet:CK.StObj.Model/23.0.1--0131-develop
NuGet:CK.Auth.Abstractions/4.0.1--0022-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0131-develop.

--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04jei7h-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0130-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04jgnwa-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0131-develop" />
   </ItemGroup>
 </Project>
