CI build: Upgrading dependencies:
NuGet:CK.Testing.StObjEngine/23.0.1--0135-develop
NuGet:CK.StObj.TypeScript/0.13.1--0074-develop
NuGet:CK.Auth.Abstractions/4.0.1--0024-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0135-develop
NuGet:CK.AspNet.Tester/4.0.3--0002-develop
NuGet:CK.AspNet.Auth/20.0.1--0072-develop
NuGet:CK.StObj.TypeScript.Engine/0.13.1--0074-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0135-develop
NuGet:CK.CodeGen/7.0.1--0045-develop
NuGet:CK.StObj.Runtime/23.0.1--0135-develop
NuGet:CK.PerfectEvent/19.0.1--0041-develop
NuGet:CK.Globalization/0.0.0--04jhx6o-develop
NuGet:CK.StObj.Model/23.0.1--0135-develop
NuGet:CK.Auth.Abstractions/4.0.1--0024-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0135-develop.

--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04jgr7h-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0134-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04jhx6o-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0135-develop" />
   </ItemGroup>
 </Project>
